Fix cards hiding behind the stage in safari / webkit

--- a/src/Game.scss
+++ b/src/Game.scss
@@ -16,7 +16,7 @@
   background-image: url(./images/table-bg-tile.jpg);
   width: 100%;
   height: 100%;
-  position: relative;
+  position: absolute;
 }
 
 .mobile-only {
